fix(css): align toc with body

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -293,7 +293,6 @@ tr {
   #tableOfContentContainer {
     position: fixed;
     left: 20px;
-    top: 18px;
     max-width: 15vw;
     width: 15vw;
   }
